--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,13 @@
 
   <body>
 
-    {% include header.html %}
+    <div class="content">
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+      {% include header.html %}
+
+      {{ content }}
+
+      <div class="push"></div>
     </div>
 
     {% include footer.html %}
