--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,6 +15,7 @@
         {% assign pages_list = site.pages %}
         {% assign group = 'main-menu' %}
         {% include pages_list.html %}
+        <li><a href="#kontakt">Kontakt</a></li>
       </ul>
     </nav>
 
