--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -11,6 +11,44 @@ body {
   color: $color-text;
 }
 
+h3 {
+  font-weight: 300;
+  font-size: 2.25em;
+  letter-spacing: -0.05em;
+  span {
+    color: $color-highlight;
+    font-weight: 600;
+    &.white {
+      color: $white;
+    }
+    &.bold {
+			font-weight: 500;
+		}
+  }
+}
+
+// - - - - - - - - - - - MIXINS - - - - - - - - - - - //
+
+%clearfix {
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
+
+@mixin retina {
+  @media
+    only screen and (-webkit-min-device-pixel-ratio: 2),
+    only screen and (min--moz-device-pixel-ratio: 2),
+    only screen and (-o-min-device-pixel-ratio: 2/1),
+    only screen and (min-device-pixel-ratio: 2),
+    only screen and (min-resolution: 192dpi),
+    only screen and (min-resolution: 2dppx) {
+    @content;
+  }
+}
+
 // - - - - - - - - - - - GLOBAL LAYOUT - - - - - - - - - - - //
 
 * {
@@ -22,9 +60,10 @@ html, body {
 }
 
 .container {
-  width: 1140px;
+  width: 1170px;
   max-width: 100%;
   margin: 0 auto;
+  padding: 0 15px;
 }
 
 .content {
@@ -39,12 +78,83 @@ footer, .push {
   height: $height-footer;
 }
 
-// - - - - - - - - - - - MIXINS - - - - - - - - - - - //
+// - - - - - - - - - - - - GRID - - - - - - - - - - - //
 
-%clearfix {
-  &:after {
-    content: "";
-    display: table;
-    clear: both;
+.row {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.col-2 {
+  width: 50%;
+  padding: 0 15px;
+  float: left;
+  position: relative;
+  min-height: 1px;
+}
+
+.col-3 {
+  width: 33.333%;
+  padding: 0 15px;
+  float: left;
+  position: relative;
+  min-height: 1px;
+}
+
+// - - - - - - - - - - - - BUTTONS - - - - - - - - - - - //
+.dark-bg {
+  background-color: $color-bg-dark;
+}
+
+// - - - - - - - - - - - - BUTTONS - - - - - - - - - - - //
+
+a.btn {
+  text-decoration: none;
+  &:hover, &:active, &:visited, &:focus {
+    text-decoration: none;
+  }
+}
+
+.btn {
+  background-color: $color-bg-dark;
+  padding: 10px 25px;
+  border-radius: 25px;
+  border: none;
+  color: $white;
+  text-transform: uppercase;
+  font-weight: 500;
+  transition: all $transition-time-button ease-in-out;
+  &:hover, &:active, &:visited, &:focus {
+    background-color: lighten($color-bg-dark, 7%);
+  }
+}
+
+.btn-white {
+  background-color: $white;
+  color: $color-bg-dark;
+  &:hover, &:active, &:visited, &:focus {
+    background-color: $color-highlight;
+    color: darken($color-bg-dark, 20%);
+  }
+}
+
+// - - - - - - - - - - - - FORMS - - - - - - - - - - - //
+
+fieldset {
+  border: none;
+}
+
+input, textarea {
+  padding: 14px 20px;
+  border: none;
+  background-color: $color-bg-dark-bright;
+  color: $white;
+  border-radius: $border-radius-card;
+  font-weight: 500;
+  transition: all $transition-time-standard ease-in-out;
+  &:focus {
+    outline: none;
+    background-color: $white;
+    color: $color-bg-dark;
   }
 }
