Added skills page

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,10 +5,10 @@
     <form action=".">
       <fieldset>
         <div class="row">
-          <div class="col-2">
+          <div class="half">
             <input type="text" name="name" value="" placeholder="Name">
           </div>
-          <div class="col-2">
+          <div class="half">
             <input type="text" name="email" value="" placeholder="E-Mail">
           </div>
         </div>
@@ -19,11 +19,11 @@
       </fieldset>
     </form>
     <ul class="social-list">
-      <li><i class="fa fa-facebook"></i></li>
-      <li><i class="fa fa-twitter"></i></li>
-      <li><i class="fa fa-github"></i></li>
-      <li><i class="fa fa-instagram"></i></li>
-      <li><i class="fa fa-envelope"></i></li>
+      <li><a href="mailto:hallo@florianweich.me"><i class="fa fa-envelope"></i></a></li>
+      <li><a href="https://www.instagram.com/florianweich/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+      <li><a href="https://www.xing.com/profile/Florian_Weich2" target="_blank"><i class="fa fa-xing"></i></a></li>
+      <li><a href="https://de.linkedin.com/in/florian-weich-6163b188" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+      <li><a href="https://github.com/florianweich" target="_blank"><i class="fa fa-github"></i></a></li>
     </ul>
   </div>
 </section>
