--- a/css/main.scss
+++ b/css/main.scss
@@ -25,6 +25,7 @@
 		float:right;
 		padding: 6px 0;
 		font-weight: 500;
+		z-index: 500;
 		ul {
 			list-style: none;
 		}
@@ -38,9 +39,47 @@
 		a {
 			text-decoration: none;
 			color: $color-bg-dark;
-			&:hover, &:active, &:visited, &:focus {
+			&:hover, &:active, &:focus {
 				text-decoration: none;
-				color: $color-bg-dark-bright;
+				color: lighten($color-bg-dark-bright, 5%);
+			}
+		}
+		.dropdown {
+			a.parent:after {
+				font-family: FontAwesome;
+		    content: "\f107";
+				position: relative;
+				top: 1px;
+		    margin-left: 7px;
+		    color: $color-bg-dark-bright;
+			}
+			.dropdown-menu {
+				display: none;
+				position: absolute;
+				top: $height-navbar;
+				transform: translateX(-25px);
+				z-index: 450;
+				background-color: $white;
+				color: $color-bg-dark;
+				margin: 0;
+				padding: 0;
+				padding-bottom: $border-radius-card;
+				border-bottom-left-radius: $border-radius-card;
+				border-bottom-right-radius: $border-radius-card;
+				li {
+					float: none;
+					margin: 0;
+					a {
+						display: block;
+						font-weight: 500;
+						padding: 10px 25px;
+						transition: all $transition-time-standard ease-in-out;
+						&:hover {
+							background-color: $color-highlight;
+							color: $color-bg-dark;
+						}
+					}
+				}
 			}
 		}
 	}
@@ -91,6 +130,46 @@
 	&#home {
 		.container {
 			background: $color-bg-dark url("../images/top-banner_img_home.png") no-repeat right bottom;
+			@include retina {
+				background: $color-bg-dark url("../images/top-banner_img_home@2x.png") no-repeat right bottom;
+				background-size: 673px auto;
+			}
+		}
+	}
+	&#skills {
+		.container {
+			background: $color-bg-dark url("../images/top-banner_img_skills.png") no-repeat right bottom;
+			@include retina {
+				background: $color-bg-dark url("../images/top-banner_img_skills@2x.png") no-repeat right bottom;
+				background-size: 821px auto;
+			}
+		}
+	}
+	&#refs {
+		.container {
+			background: $color-bg-dark url("../images/top-banner_img_refs.png") no-repeat right bottom;
+			@include retina {
+				background: $color-bg-dark url("../images/top-banner_img_refs@2x.png") no-repeat right bottom;
+				background-size: 651px auto;
+			}
+		}
+	}
+	&#aboutme {
+		.container {
+			background: $color-bg-dark url("../images/top-banner_img_aboutme.png") no-repeat right bottom;
+			@include retina {
+				background: $color-bg-dark url("../images/top-banner_img_aboutme@2x.png") no-repeat right bottom;
+				background-size: 688px auto;
+			}
+		}
+	}
+	&#legal {
+		.container {
+			background: $color-bg-dark url("../images/top-banner_img_legal.png") no-repeat right bottom;
+			@include retina {
+				background: $color-bg-dark url("../images/top-banner_img_legal@2x.png") no-repeat right bottom;
+				background-size: 672px auto;
+			}
 		}
 	}
 }
@@ -123,9 +202,9 @@ footer {
 			color: $white;
 			text-decoration: none;
 			text-transform: uppercase;
-			&:hover, &:active, &:visited, &:focus {
+			&:hover, &:active, &:focus {
 				text-decoration: none;
-				color: darken($white, 15%);
+				color: $color-highlight;
 			}
 		}
 	}
@@ -147,6 +226,10 @@ section.code-separator {
 		position: relative;
 		top: 8px;
 		margin-right: 20px;
+		&.small {
+			font-size: 1.75em;
+			top:5px;
+		}
 	}
 	.green {
 		color: $color-highlight;
@@ -177,22 +260,28 @@ section.code-separator {
 		height: 100px;
 		border-top-left-radius: $border-radius-card;
 		border-top-right-radius: $border-radius-card;
+		&.wide {
+			background-repeat: repeat-x!important;
+		}
 		&#card-bg-01 {
 			background: url("../images/bg_card_01.png") no-repeat, $card-background-gradient;
 			@include retina {
 				background: url("../images/bg_card_01@2x.png") no-repeat, $card-background-gradient;
+				background-size: 350px 100px;
 			}
 		}
 		&#card-bg-02 {
 			background: url("../images/bg_card_02.png") no-repeat, $card-background-gradient;
 			@include retina {
 				background: url("../images/bg_card_02@2x.png") no-repeat, $card-background-gradient;
+				background-size: 350px 100px;
 			}
 		}
 		&#card-bg-03 {
 			background: url("../images/bg_card_03.png") no-repeat, $card-background-gradient;
 			@include retina {
 				background: url("../images/bg_card_03@2x.png") no-repeat, $card-background-gradient;
+				background-size: 350px 100px;
 			}
 		}
 		.icon-circle {
@@ -238,7 +327,7 @@ section.code-separator {
 	}
 }
 
-// - - - - - - - - - - - - REFEREZEN START - - - - - - - - - - - - //
+// - - - - - - - - - - - - REFERENZEN START - - - - - - - - - - - - //
 #references {
 	padding-top: $padding-section;
 	text-align: center;
@@ -309,6 +398,120 @@ section.code-separator {
 	}
 }
 
+// - - - - - - - - - - - - SKILLS - - - - - - - - - - - - //
+
+.badge-list {
+	@extend %clearfix;
+	list-style: none;
+	width: 100%;
+	margin: 0;
+	.badge-item {
+		width: 33.333%;
+		margin: 0 auto;
+		float: left;
+		.badge-frame {
+		  border-radius: $border-radius-card;
+		  background-color: $color-bg-dark-bright;
+		  box-shadow: inset 0px 3px 15px 0px rgba(24, 25, 24, 0.5);
+		  width: 158px;
+		  height: 200px;
+			img {
+				width: auto;
+				height: 88px;
+				margin-top: 38px;
+			}
+			.badge-title {
+				margin: 0;
+				margin-top: 15px;
+				color: $white;
+				font-size: 21px;
+			}
+		}
+	}
+}
+
+.tools-icon-list {
+	@extend %clearfix;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	margin-bottom: 25px;
+	.tools-icon-list-item {
+		width: 25%;
+		float: left;
+		margin: 0;
+		font-size: 4em;
+		color: $color-bg-dark;
+	}
+}
+
+#toolsframeworks {
+	padding: $padding-section 0;
+	text-align: center;
+	.intro-text {
+		margin-bottom: 36px;
+	}
+}
+
+// - - - - - - - - - - - - COLLECTIONS - - - - - - - - - - - - //
+.collection {
+	@extend %clearfix;
+	list-style: none;
+	padding: 0;
+	margin-left: -15px;
+	margin-right: -15px;
+	.collection-item {
+		$collection-item-height: 120px;
+		width: 50%;
+		float: left;
+		$distance-bottom: 10px;
+		height: $collection-item-height + 2 * $distance-bottom;
+		padding: $distance-bottom 15px;
+		.collection-item-content {
+			@extend %clearfix;
+			min-height: 100%;
+			height: 100%;
+			background-color: $white;
+			color: $color-bg-dark;
+			border-top-right-radius: $border-radius-card;
+			border-bottom-right-radius: $border-radius-card;
+			border-top-left-radius: $collection-item-height/2;
+			border-bottom-left-radius: $collection-item-height/2;
+			text-align: left;
+			padding-right: 15px;
+			.collection-icon-wrapper {
+				float: left;
+				width: $collection-item-height;
+				height: $collection-item-height;
+				margin-right: 20px;
+				background-color: $white;
+				border-radius: 50%;
+  			box-shadow: 2px 2px 10px 1px rgba(52, 52, 52, 0.4);
+				border: 6px $white solid;
+				text-align: center;
+				background-size: $collection-item-height*0.9!important;
+				span.devicons {
+					line-height: 108px;
+					color: $white;
+					font-size: 4em;
+				}
+			}
+			h5 {
+				text-transform: uppercase;
+				margin: 0;
+				padding-top: 19px;
+			}
+			h4 {
+				font-size: 1.5em;
+				margin: 0;
+			}
+			p {
+				margin: 0;
+			}
+		}
+	}
+}
+
 // - - - - - - - - - - - - CONTACT - - - - - - - - - - - - //
 #kontakt {
 	padding: $padding-section 0;
@@ -343,13 +546,25 @@ section.code-separator {
 			background-color: $white;
 			color: $color-bg-dark;
 			float:left;
-			margin-left: 10px;
-			$social-size: 55px;
+			margin-left: 15px;
+			$social-size: 50px;
 			width: $social-size;
 			height: $social-size;
+			transition: all $transition-time-standard ease-in-out;
+			&:hover {
+				background-color: $color-highlight;
+			}
 			.fa {
-				font-size: 2em;
+				font-size: 1.75em;
 				line-height: $social-size;
+			}
+			a {
+				display: block;
+				color: $color-bg-dark;
+				transition: all $transition-time-standard ease-in-out;
+				&:hover, &:active, &:focus {
+					color: $white;
+				}
 			}
 		}
 	}
