--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,4 +1,4 @@
-// - - - - - - - - - - - - - FONTS - - - - - - - - - - - - - //
+// - - - - - - - - - - - - - FONTS & TEXT - - - - - - - - - - - - - //
 
 body {
   font-family: $base-font-family;
@@ -29,6 +29,30 @@ h3 {
       font-weight: 200;
     }
   }
+}
+
+a {
+  text-decoration: none;
+  color: $color-highlight;
+  &:hover, &:active {
+    text-decoration: underline;
+  }
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-justify {
+  text-align: justify;
 }
 
 // - - - - - - - - - - - MIXINS - - - - - - - - - - - //
@@ -82,9 +106,14 @@ footer, .push {
   height: $height-footer;
 }
 
+section.std-pad {
+  padding: $padding-section 0;
+}
+
 // - - - - - - - - - - - - GRID - - - - - - - - - - - //
 
 .row {
+  @extend %clearfix;
   margin-left: -15px;
   margin-right: -15px;
 }
