--- a/css/main.scss
+++ b/css/main.scss
@@ -245,6 +245,7 @@ section.code-separator {
 	margin-top: -50px;
 	z-index: 50;
 }
+$card-background-gradient: linear-gradient($color-gradient-start, $color-gradient-end);
 .card {
 	width: 100%;
 	float: left;
@@ -255,7 +256,6 @@ section.code-separator {
 	color: $color-bg-dark;
 	.card-header {
 		background-color: $color-gradient-start;
-		$card-background-gradient: linear-gradient($color-gradient-start, $color-gradient-end);
 		background-image: $card-background-gradient;
 		height: 100px;
 		border-top-left-radius: $border-radius-card;
@@ -530,6 +530,180 @@ section.code-separator {
 			}
 			p {
 				margin: 0;
+			}
+		}
+	}
+}
+
+// - - - - - - - - - - - - REFERENZEN - - - - - - - - - - - - //
+#references-main {
+	margin-top: -50px;
+	$refs-margin: 15px;
+	.references-list {
+		@extend %clearfix;
+		margin: 0;
+		padding: 0;
+		list-style: none;
+		margin-left: -$refs-margin;
+		margin-right: -$refs-margin;
+		.references-list-item {
+			display: block;
+			width: 33%;
+			padding: 0 $refs-margin;
+			margin-bottom: 2*$refs-margin;
+			a {
+				display: block;
+				&:hover {
+					text-decoration: none;
+					.references-list-box {
+						transform: scale(1.03);
+						box-shadow: 0px 30px 35px 0px rgba(25, 25, 25, 0.5);
+						z-index: 999;
+					}
+				}
+			}
+			.references-list-box {
+				background-color: $white;
+				border-radius: $border-radius-card;
+				color: $color-bg-dark;
+  			box-shadow: 0px 7px 23px 0px rgba(52, 52, 52, 0.5);
+				transition: transform $transition-time-standard ease-in-out, box-shadow $transition-time-standard ease-in-out;
+				z-index: 250;
+				.top-border {
+					background: url("../images/bg_card_01.png") repeat-x, $card-background-gradient;
+					background-position: center -48px;
+					@include retina {
+						background: url("../images/bg_card_01@2x.png") repeat-x, $card-background-gradient;
+						background-size: 350px 100px;
+					}
+					height: 13px;
+					border-top-left-radius: $border-radius-card;
+					border-top-right-radius: $border-radius-card;
+				}
+				.references-list-box-header {
+					.img-wrapper {
+						//position: relative;
+						&:after {
+							// content: " ";
+							// background-image: linear-gradient( rgba(25, 25, 25, 0), rgba(25, 25, 25, 0.4) );
+							// height: 25px;
+							// width: 100%;
+							// position: absolute;
+							// bottom: 0;
+							// z-index: 599;
+						}
+						img.main {
+							max-width: 100%;
+							height: auto;
+							position: relative;
+							z-index: 550;
+							margin-bottom: -$border-radius-card / 2;
+						}
+					}
+				}
+				.references-list-box-body {
+					padding: 10px 15px;
+					text-align: center;
+					.icon-circle {
+					  border-radius: 50%;
+					  background-color: $white;
+					  box-shadow: 0px 2px 10px 0px rgba(52, 52, 52, 0.3);
+					  width: 110px;
+					  height: 110px;
+						position: relative;
+					  z-index: 600;
+						margin: 0 auto;
+						padding: 5px;
+						float:right;
+						margin-top: -65px;
+						img {
+							width: 100px;
+							height: 100px;
+						}
+					}
+					h4, h5, p {
+						margin: 0;
+						text-align: left;
+					}
+					h5 {
+						text-transform: uppercase;
+						padding: 5px 0;
+						font-weight: 500;
+					}
+					h4 {
+						font-size: 1.4em;
+						font-weight: 500;
+						margin-bottom: 10px;
+					}
+					p {
+						padding-bottom: 5px;
+					}
+					.tag-icon-list {
+						@extend %clearfix;
+						display: inline-block;
+						text-align: center;
+						padding: 0;
+						margin: 0;
+						margin-top: 10px;
+						list-style: none;
+						.tag-icon-list-item {
+							$tag-icon-size: 30px;
+							float: left;
+							width: $tag-icon-size;
+							height: $tag-icon-size;
+							margin-right: 5px;
+							background-color: $color-bg-dark;
+							border-radius: 50%;
+							color: $white;
+							text-align: center;
+							.devicons {
+								font-size: 1.2em;
+								line-height: $tag-icon-size;
+							}
+							.fa {
+								font-size: 1em;
+								line-height: $tag-icon-size;
+								display: inline;
+								margin: 0;
+								.tooltip {
+									line-height: 26px;
+									padding-top: 2px;
+									top: -2 * $tag-icon-size;
+								}
+							}
+							.tooltip {
+								opacity: 0;
+								font-family: $base-font-family;
+								font-weight: 500;
+								font-size: $base-font-size - 3px;
+								white-space: nowrap;
+								display: inline-block;
+								position: relative;
+								top: -2 * $tag-icon-size - 4px;
+								left: $tag-icon-size / 2;
+								border-radius: 6px;
+								transform: translateX(-50%);
+								height: $tag-icon-size;
+								padding: 0 6px;
+								margin: 0;
+								background-color: $color-highlight;
+								color: $color-bg-dark;
+								z-index: 600;
+								box-shadow: 0px 2px 10px 0px rgba(52, 52, 52, 0.3);
+							}
+							&:hover {
+								background-color: $color-highlight;
+								border-top-left-radius: 0;
+								border-top-right-radius: 0;
+								box-shadow: 0px 2px 10px 0px rgba(52, 52, 52, 0.3);
+								cursor: default;
+								.tooltip {
+									opacity: 1;
+								}
+							}
+						}
+					}
+				}
 			}
 		}
 	}
