--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,22 +2,30 @@
   <div class="container">
     <h3><span class="bold white">sagen</span>sie<span>hallo</span></h3>
     <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
-    <form action=".">
+    <form method="POST" id="contactform">
       <fieldset>
         <div class="row">
           <div class="half">
-            <input type="text" name="name" value="" placeholder="Name">
+            <input type="text" name="name" value="" placeholder="Name" required="required">
           </div>
           <div class="half">
-            <input type="text" name="email" value="" placeholder="E-Mail">
+            <input type="email" name="_replyto" value="" placeholder="E-Mail" required="required">
           </div>
         </div>
 
-        <textarea name="message" rows="8" placeholder="Nachricht"></textarea>
-        <button type="submit" name="submit" class="btn btn-white">Senden</button>
+        <textarea name="message" rows="8" placeholder="Nachricht" required="required"></textarea>
+
+        <input type="text" name="_gotcha" style="display:none">
+        <input type="hidden" name="_next" value="{{ "/danke/" | prepend: site.url }}">
+        <input type="hidden" name="_subject" value="Neue Nachricht via florianweich.me">
+        <button type="submit" class="btn btn-white">Senden</button>
 
       </fieldset>
     </form>
+    <script>
+        var contactform =  document.getElementById('contactform');
+        contactform.setAttribute('action', '//formspree.io/' + 'hallo' + '@' + 'florianweich' + '.' + 'me');
+    </script>
     {% include social_list.html %}
   </div>
 </section>
