--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -116,10 +116,6 @@ section.std-pad {
   @extend %clearfix;
   margin-left: -15px;
   margin-right: -15px;
-  &.flex {
-    display: flex;
-    flex-wrap: nowrap;
-  }
 }
 
 .half {
@@ -128,10 +124,6 @@ section.std-pad {
   float: left;
   position: relative;
   min-height: 1px;
-  &.flex {
-    display: flex;
-    flex-direction: column;
-  }
 }
 
 .two-thirds {
@@ -140,10 +132,6 @@ section.std-pad {
   float:left;
   position: relative;
   min-height: 1px;
-  &.flex {
-    display: flex;
-    flex-direction: column;
-  }
 }
 
 .thirds {
@@ -152,10 +140,6 @@ section.std-pad {
   float: left;
   position: relative;
   min-height: 1px;
-  &.flex {
-    display: flex;
-    flex-direction: column;
-  }
 }
 
 // - - - - - - - - - - - - BUTTONS - - - - - - - - - - - //
@@ -183,6 +167,9 @@ a.btn {
   transition: all $transition-time-button ease-in-out;
   &:hover, &:active, &:focus {
     background-color: lighten($color-bg-dark, 10%);
+  }
+  &:focus {
+    outline: 0;
   }
 }
 
