--- a/css/main.scss
+++ b/css/main.scss
@@ -217,12 +217,12 @@ section.code-separator {
 	font-family: "Source Code Pro", sans-serif;
 	font-weight: 600;
 	font-size: 1.7em;
-	letter-spacing: -0.08em;
+	letter-spacing: -0.06em;
 	text-align: center;
 	.pre {
 		color: $color-code-pre;
 		font-size: 2em;
-		letter-spacing: -0.09em;
+		letter-spacing: -0.07em;
 		position: relative;
 		top: 8px;
 		margin-right: 20px;
@@ -248,9 +248,6 @@ section.code-separator {
 $card-background-gradient: linear-gradient($color-gradient-start, $color-gradient-end);
 .card {
 	width: 100%;
-	display: flex;
-	flex-direction: column;
-	flex: 1;
   border-radius: $border-radius-card;
   background-color: $white;
   box-shadow: 0px 7px 23px 0px rgba(52, 52, 52, 0.4);
@@ -315,9 +312,6 @@ $card-background-gradient: linear-gradient($color-gradient-start, $color-gradien
 		padding: 15px;
 		padding-bottom: 30px;
 		text-align: center;
-		display: flex;
-		flex-direction: column;
-		flex: 1;
 		h4 {
 			font-size: 1.6em;
 			font-weight: 500;
@@ -330,7 +324,6 @@ $card-background-gradient: linear-gradient($color-gradient-start, $color-gradien
 		}
 		.btn {
 		  margin: 0 auto;
-		  display: inline-table;
 		}
 		&.fullsize-img {
 			padding: 0!important;
@@ -726,6 +719,7 @@ $card-background-gradient: linear-gradient($color-gradient-start, $color-gradien
 // - - - - - - - - - - - - ABOUT ME - - - - - - - - - - - - //
 #profile-image {
 	background-image: url({{ "../images/florianweich_profile.jpg" | prepend: site.baseurl }});
+	height: 300px;
 	background-size: cover;
 	background-position: center;
 	border-bottom-left-radius: $border-radius-card;
@@ -746,7 +740,7 @@ $card-background-gradient: linear-gradient($color-gradient-start, $color-gradien
 		@extend %clearfix;
 		display: inline-block;
 		list-style: none;
-		margin: 0;
+		margin: 0 auto;
 		margin-top: 10px;
 		padding: 0;
 		li {
@@ -856,5 +850,11 @@ $card-background-gradient: linear-gradient($color-gradient-start, $color-gradien
 				}
 			}
 		}
+	}
+}
+#thanks {
+	.lead {
+		font-size: 19px;
+		text-align: center;
 	}
 }
