--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -24,7 +24,9 @@
     </form>
     <script>
         var contactform =  document.getElementById('contactform');
-        contactform.setAttribute('action', '//formspree.io/' + 'hallo' + '@' + 'florianweich' + '.' + 'me');
+        var pre = "hallo";
+        var main = "florianweich";
+        contactform.setAttribute('action', '//formspree.io/' + pre + '@' + main + '.' + 'me');
     </script>
     {% include social_list.html %}
   </div>
