--- a/_includes/social_list.html
+++ b/_includes/social_list.html
@@ -1,7 +1,32 @@
 <ul class="social-list">
-  <li><a href="mailto:hallo@florianweich.me"><i class="fa fa-envelope"></i></a></li>
+  <li>
+    <script type="text/javascript" language="javascript">
+    <!--
+    // Email obfuscator script 2.1 by Tim Williams, University of Arizona
+    // Random encryption key feature by Andrew Moulden, Site Engineering Ltd
+    // This code is freeware provided these four comment lines remain intact
+    // A wizard to generate this code is at http://www.jottings.com/obfuscator/
+    { coded = "Wugg3@dg3HIurMoIVW.Go"
+      key = "3gyakM1SsiGx7Y0ZnOcJeXf9u6CzAKIDvEhT8rLVUoldQFwjPptmNRbW2BHq45"
+      shift=coded.length
+      link=""
+      for (i=0; i<coded.length; i++) {
+        if (key.indexOf(coded.charAt(i))==-1) {
+          ltr = coded.charAt(i)
+          link += (ltr)
+        }
+        else {
+          ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
+          link += (key.charAt(ltr))
+        }
+      }
+    document.write("<a href='mailto:"+link+"'><i class='fa fa-envelope'></i></a>")
+    }
+    //-->
+    </script><noscript>Sorry, you need Javascript on to email me.</noscript>
+  </li>
   <li><a href="https://github.com/florianweich" target="_blank"><i class="fa fa-github"></i></a></li>
   <li><a href="https://www.xing.com/profile/Florian_Weich2" target="_blank"><i class="fa fa-xing"></i></a></li>
   <li><a href="https://de.linkedin.com/in/florian-weich-6163b188" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-  <li><a href="https://www.instagram.com/florianweich/" target="_blank"><i class="fa fa-instagram"></i></a></li>  
+  <li><a href="https://www.instagram.com/florianweich/" target="_blank"><i class="fa fa-instagram"></i></a></li>
 </ul>
