--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,18 +6,19 @@
     </a>
 
     <nav>
-      <ul>
+      <ul class="main-nav hidden">
         {% if page.url == '/' %}
         <li class="active"><a href="{{ site.baseurl }}/">Home</a></li>
         {% else %}
         <li><a href="{{ site.baseurl }}/">Home</a></li>
         {% endif %}
-        <li class="{% if page.url contains '/kenntnisse/' %}active{% endif %} dropdown">
-          <a href="{{ "/kenntnisse/" | prepend: site.baseurl }}" class="parent">Kenntnisse</a>
+        <li class="{% if page.url contains '/kenntnisse/' %}active-expanded{% endif %} dropdown">
+          <a href="{{ "/kenntnisse/" | prepend: site.baseurl }}" class="parent no-link">Kenntnisse</a>
           <ul class="dropdown-menu">
-            <li><a href="{{ "/kenntnisse/frontend/" | prepend: site.baseurl }}">HTML, CSS &amp; JS</a></li>
-            <li><a href="{{ "/kenntnisse/wordpress/" | prepend: site.baseurl }}">Wordpress</a></li>
-            <li><a href="{{ "/kenntnisse/rails/" | prepend: site.baseurl }}">Ruby on Rails</a></li>
+            <li class="{% if page.url == '/kenntnisse/frontend/' %}active{% endif %}"><a href="{{ "/kenntnisse/frontend/" | prepend: site.baseurl }}">Frontend</a></li>
+            <li class="{% if page.url == '/kenntnisse/wordpress/' %}active{% endif %}"><a href="{{ "/kenntnisse/wordpress/" | prepend: site.baseurl }}">Wordpress</a></li>
+            <li class="{% if page.url == '/kenntnisse/rails/' %}active{% endif %}"><a href="{{ "/kenntnisse/rails/" | prepend: site.baseurl }}">Ruby on Rails</a></li>
+            <li class="{% if page.url == '/kenntnisse/apps/' %}active{% endif %}"><a href="{{ "/kenntnisse/apps/" | prepend: site.baseurl }}">Apps</a></li>
           </ul>
         </li>
         {% assign pages_list = site.pages %}
@@ -25,6 +26,9 @@
         {% include pages_list.html %}
         <li><a href="#kontakt">Kontakt</a></li>
       </ul>
+      <div id="mobile-menu-btn">
+        <i class="fa fa-bars"></i>
+      </div>
     </nav>
 
   </div>
